Fix contrast ration related CSS issues.

--- a/_sass/_darcula.scss
+++ b/_sass/_darcula.scss
@@ -15,12 +15,13 @@ code {
 code.highlighter-rouge {
     background-color: #f3f3ff;
     font-size: 15px;
+    box-shadow: 0 1px 1px rgba(0, 0, 0, 0.14);
 }
 
 .highlighter-rouge { 
     color: #5b5be0;
     padding: 2px 4px;
-    border-radius: 5px;
+    border-radius: 4px;
     font-size: 16px;
 }
 
