--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -6,6 +6,8 @@
 // Colors
 $blue: #4183C4;
 $darkPurple: #673AB7;
+$purple: #5f40f6;
+$gunpowder: #3c3a57;
 
 // Grays
 $black: #000;
